--- a/StorageBuffer/OrderWindow.xaml
+++ b/StorageBuffer/OrderWindow.xaml
@@ -92,7 +92,11 @@
                     <ComboBoxItem>Betalt</ComboBoxItem>
                     <ComboBoxItem>Anulleret</ComboBoxItem>
                 </ComboBox>
-                <ListView Name="lvResult" FontSize="20" HorizontalAlignment="Left" Height="716" Margin="0,108,0,0" VerticalAlignment="Top" Width="932">
+
+                <TextBox Name="tbOrderDescription" Text="" FontSize="20" VerticalContentAlignment="Top" HorizontalAlignment="Left" Height="141" Margin="0,150,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="932" />
+
+
+                <ListView Name="lvResult" FontSize="20" HorizontalAlignment="Left" Height="549" Margin="0,296,0,0" VerticalAlignment="Top" Width="932">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn Header="Id" DisplayMemberBinding="{Binding MaterialId}" />
@@ -138,6 +142,7 @@
                         </Style>
                     </Button.Resources>
                 </Button>
+                <Label Name="lOrderDescription" Content="Beskrivelse" FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" Width="240" Margin="0,100,0,0" Height="50"/>
 
             </Grid>
         </Grid>
