--- a/StorageBuffer/MainWindow.xaml
+++ b/StorageBuffer/MainWindow.xaml
@@ -126,7 +126,7 @@
                     <TextBox Name="tbCreateMaterial" Text="0" Foreground="#A8A1A2" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="50" Margin="768,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="164" PreviewMouseDown="tbInactive_OnMouseDown" TextChanged="TbSearchBar_TextChanged"/>
                     <Label Content="Bemærkning" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="0,95,0,0"/>
                     <TextBox Name="tbCreateMaterialComments" Text="" Foreground="#A8A1A2" VerticalContentAlignment="Top" HorizontalAlignment="Left" Height="706" Margin="0,137,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="932" PreviewMouseDown="tbInactive_OnMouseDown" TextChanged="TbSearchBar_TextChanged"/>
-                    <Button Name="btnCreateMateriale" FontSize="20" Content="Opret Materiale" HorizontalAlignment="Right" Width="280" Margin="0,848,0,0" Click="BtnCreateOrder_Click">
+                    <Button Name="btnCreateMateriale" FontSize="20" Content="Opret Materiale" HorizontalAlignment="Right" Width="280" Margin="0,848,0,0">
                         <Button.Resources>
                             <Style TargetType="{x:Type Button}">
                                 <Setter Property="Foreground" Value="White" />
@@ -255,7 +255,7 @@
                     <TextBox Name="tbCreateCustomerComments" Text="" Foreground="#A8A1A2" VerticalContentAlignment="Top" HorizontalAlignment="Left" Height="517" Margin="0,326,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="932" PreviewMouseDown="tbInactive_OnMouseDown" TextChanged="TbSearchBar_TextChanged"/>
                     <Label Content="Telefon nr." HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="723,92,0,0"/>
                     <TextBox Name="tbCreateCustomerPhone" Text="f.eks. 12345678" Foreground="#A8A1A2" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="50" Margin="723,131,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="209" PreviewMouseDown="tbInactive_OnMouseDown" TextChanged="TbSearchBar_TextChanged"/>
-                    <Button Name="btnCreateCustomer" FontSize="20" Content="Opret Kunde" HorizontalAlignment="Right" Width="280" Margin="0,848,0,0" Click="BtnCreateOrder_Click">
+                    <Button Name="btnCreateCustomer" FontSize="20" Content="Opret Kunde" HorizontalAlignment="Right" Width="280" Margin="0,848,0,0">
                         <Button.Resources>
                             <Style TargetType="{x:Type Button}">
                                 <Setter Property="Foreground" Value="White" />
