--- a/StorageBuffer/OrderWindow.xaml
+++ b/StorageBuffer/OrderWindow.xaml
@@ -144,6 +144,38 @@
                     </Button.Resources>
                 </Button>
                 <Label Name="lOrderDescription" Content="Beskrivelse" FontSize="20" VerticalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" Width="240" Margin="0,100,0,0" Height="50"/>
+                <Button x:Name="btnDeleteOrder" FontSize="20" Content="Slet Ordren" HorizontalAlignment="Right" Margin="0,850,654,0" VerticalAlignment="Top" Width="280" Height="50" Click="BtnDeleteOrder_Click">
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Foreground" Value="White" />
+                            <Setter Property="Background" Value="#A8A1A2"/>
+                            <Setter Property="BorderThickness" Value="0"/>
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Grid x:Name="Panel">
+                                            <ContentPresenter x:Name="ContentSite"
+                                                VerticalAlignment="Center"
+                                                HorizontalAlignment="Center"/>
+                                        </Grid>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter TargetName="Panel" Property="Background" Value="#887e80"/>
+                                                <Setter TargetName="Panel" Property="Cursor" Value="Hand"/>
+                                            </Trigger>
+                                            <Trigger Property="IsMouseOver" Value="False">
+                                                <Setter TargetName="Panel" Property="Background" Value="#A8A1A2"/>
+                                            </Trigger>
+                                            <Trigger Property="IsPressed" Value="True">
+                                                <Setter TargetName="Panel" Property="Background" Value="#2F2F2F"/>
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </Button.Resources>
+                </Button>
 
             </Grid>
         </Grid>
