--- a/StorageBuffer/MainWindow.xaml
+++ b/StorageBuffer/MainWindow.xaml
@@ -68,7 +68,7 @@
                             <GridView>
                                 <GridViewColumn Header="Type" DisplayMemberBinding="{Binding Type}" />
                                 <GridViewColumn Header="Id" DisplayMemberBinding="{Binding Id}" />
-                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" />
+                                <GridViewColumn Header="Navn" DisplayMemberBinding="{Binding Name}" />
                                 <GridViewColumn Header="Data" DisplayMemberBinding="{Binding Data}" />
                             </GridView>
                         </ListView.View>
