Small visual hotfixes

--- a/StorageBuffer/MaterialWindow.xaml
+++ b/StorageBuffer/MaterialWindow.xaml
@@ -87,7 +87,7 @@
                 <TextBox x:Name="tbMaterialQuantity" Text="" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="50" Margin="768,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="164" />
                 <Label Content="Bemærkning" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="0,95,0,0"/>
                 <TextBox x:Name="tbMaterialComment" Text="" VerticalContentAlignment="Top" HorizontalAlignment="Left" Height="708" Margin="0,137,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="932" />
-                <Button x:Name="btnDeleteMaterial" FontSize="20" Content="Slet Ordren" HorizontalAlignment="Right" Margin="0,850,654,0" VerticalAlignment="Top" Width="280" Height="50" Click="BtnDeleteMaterial_Click">
+                <Button x:Name="btnDeleteMaterial" FontSize="20" Content="Slet Materialet" HorizontalAlignment="Right" Margin="0,850,654,0" VerticalAlignment="Top" Width="280" Height="50" Click="BtnDeleteMaterial_Click">
                     <Button.Resources>
                         <Style TargetType="{x:Type Button}">
                             <Setter Property="Foreground" Value="White" />
