--- a/StorageBuffer/MainWindow.xaml
+++ b/StorageBuffer/MainWindow.xaml
@@ -56,12 +56,12 @@
                 <Grid Background="#FFF" Margin="26,28,30,30">
                     <ComboBox Name="cbChoice" BorderThickness="1" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="734,37,0,0" VerticalAlignment="Top" Width="198" Height="50" SelectionChanged="CbChoice_SelectionChanged">
                         <ComboBoxItem IsSelected="True">Alle</ComboBoxItem>
-                        <ComboBoxItem>Vare</ComboBoxItem>
+                        <ComboBoxItem>Materiale</ComboBoxItem>
                         <ComboBoxItem>Ordre</ComboBoxItem>
                         <ComboBoxItem>Kunder</ComboBoxItem>
                     </ComboBox>
 
-                    <TextBox Name="tbSearchBar" Text="navn, telefonnummer, ordrenavn, varenavn..." Foreground="#A8A1A2" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="50" Margin="0,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="735" PreviewMouseDown="tbInactive_OnMouseDown" TextChanged="TbSearchBar_TextChanged"/>
+                    <TextBox Name="tbSearchBar" Text="navn, telefonnummer, ordrenavn, materiale..." Foreground="#A8A1A2" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="50" Margin="0,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="735" PreviewMouseDown="tbInactive_OnMouseDown" TextChanged="TbSearchBar_TextChanged"/>
                     <Label Content="Søg" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120"/>
                     <ListView  Name="lvResult" HorizontalAlignment="Left" Height="790" Margin="0,108,0,0" VerticalAlignment="Top" Width="932">
                         <ListView.View>
